# ChangeLog for dev-db/drizzle
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.2 2010/01/13 10:21:32 flameeyes Exp $

*drizzle-2010.01.1263 (13 Jan 2010)

  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +drizzle-2010.01.1263.ebuild:
  Version bump.

*drizzle-2009.12.1251 (23 Dec 2009)

  23 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/drizzle-2009.12.1240-asneeded.patch,
  +files/drizzle-2009.12.1240-nolint.patch, +drizzle-2009.12.1251.ebuild,
  +metadata.xml:
  Initial import of drizzle, masked, some things are definitely yet to
  polish, like PAM integration, upstream as well as in Gentoo. Once again
  thanks to Pavel Stratil for the base ebuild and testing work.
