@@ -5,14 +5,16 @@ AUX drizzle-2009.12.1240-asneeded.patch 707 RMD160 a3bc68cff9c9bdc74647461f956e2
 AUX drizzle-2009.12.1240-nolint.patch 366 RMD160 5edac5d0f35b6a7830ba4c5d4cc9fa78f30c29bc SHA1 29f2257773552dabc40424ac068ca4ef32425d01 SHA256 612ffed94aebcce0aeef56a4fabfe35a5bb01f6c85a4c00757bef59f0cd75312
 DIST drizzle-2009.12.1251.tar.gz 7524661 RMD160 6d12d6d282a43756e2f56a60a18e5382d78fae28 SHA1 639472cf93451b009729a713e86dce498726667e SHA256 50ee541dbadb10a6f62ef52419e6a789ca15caeb371627210037362b5dc18bd4
 DIST drizzle-2010.01.1263.tar.gz 7532727 RMD160 19f6e69c35500fbd135d818e94ba4b60fd188397 SHA1 5795ef266e2a74094a59dd4adbe789f9982ff33a SHA256 fe60480362725ce5154c8276c92c165f91043d7368e3f1efed9025742cdff1fa
+DIST drizzle-2010.01.1273.tar.gz 7407764 RMD160 ca4cdba20265f8b42f4a3b79a29c6bb18256dee4 SHA1 6f5211cbfb7e1365e40ff200edef190100de3e4c SHA256 96f6426d66cbcde422d9eab3b985f75fe461b071baf05bd161a41ba51b7be8fa
 EBUILD drizzle-2009.12.1251.ebuild 3252 RMD160 41921afb3c4f33d013ff554ffc1e8c75f65d88cb SHA1 5b19dc2285753ec87dba4fd54b2d0051211510c0 SHA256 0382fbae640eca5a833e14d08ba6f2c903d62b8c47666403df03f1ca35f87103
 EBUILD drizzle-2010.01.1263.ebuild 3196 RMD160 9b85be12fb17d2e6b9875087d6462cfc65932bb5 SHA1 ec10e1b4d805f29b911f61ff4f8e702e20c44ee1 SHA256 0b06d3b36d1ad0d898ae79ce2a46e092db231cd17aa89155e84a485776a8b8bb
-MISC ChangeLog 786 RMD160 4458e8cab9b2615c1a3d6aba6d3599c3cd2e8dec SHA1 7e2c6108d6d72d7a62adf35dd14e7bd455ac2ef2 SHA256 ca1ea7890e48d675740ffa84b5b12681272b37bd83ecfdd5b79a38395328bb73
+EBUILD drizzle-2010.01.1273.ebuild 3020 RMD160 da4c3a14273f0f7074c50d23c12e5fed1cf943dc SHA1 1916d57de9527b17bbb1d7ebe159517f691485eb SHA256 f1c60d416b035cb365440290c6c87f1bf67a1de5afede8633af837213c8b13af
+MISC ChangeLog 969 RMD160 a5a6fb0eb796081aeb6e81ec60bd5b6d1475effb SHA1 3f7b62d1b2bccabf3e9c608b54fdc769b7a437c9 SHA256 d2e2e4fab44bf8f6ec65080a2516096a75fb359c07945d89e6830a74f040f58f
 MISC metadata.xml 2263 RMD160 160a507de863707c2d258cb29b787437b8787398 SHA1 62839e65f03b5261e2df6acbee1fce6240a3e1ed SHA256 ec06196287c8cf1b2369fb687435fdf3e5e392e9778b71366c4e44148289d4d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktNnrMACgkQAiZjviIA2Xiw3QCg2KNsg007HXu1a3peuadgTwl2
-kSAAniUGZQgyiBIC8oTZsr/pL7T6WQmh
-=YPZd
+iEYEARECAAYFAktiuGkACgkQAiZjviIA2XgREwCfY7MDkl3me6h4em+NQS+sV5Dt
++TkAoOLR6NmP1mksGYC8SbzLT9WD1VCF
+=WK5p
 -----END PGP SIGNATURE-----
