@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/drizzle
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.2 2010/01/13 10:21:32 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/drizzle/ChangeLog,v 1.3 2010/01/29 10:30:15 flameeyes Exp $
+
+*drizzle-2010.01.1273 (29 Jan 2010)
+
+  29 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +drizzle-2010.01.1273.ebuild:
+  Version bump, hello world tests are properly disabled.
 
 *drizzle-2010.01.1263 (13 Jan 2010)
 
